force-app/main/default/src/objects/echosign_dev1__Attachment_Mutex__c/echosign_dev1__Attachment_Mutex__c.object-meta.xml
<CustomObject>
    <label>Attachment Mutex</label>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Attachment Mutex Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments Mutex</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>