force-app/main/default/src/objects/echosign_dev1__Attachment_Mutex__c/fields/echosign_dev1__Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attachment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>